# LDRSensorColor

circuitos/PCB-fotodiodo/: PCB-fotodiodo.kicad_pcb  PCB-fotodiodo.kicad_prl  PCB-fotodiodo.kicad_pro  PCB-fotodiodo.kicad_sch  PCB-fotodiodo.net  alimentacion.kicad_sch  filtroantialiasing.kicad_sch  fp-info-cache  pulsadores.kicad_sch  sensores.kicad_sch
firmware/: CMakeLists.txt  README.md
